2003-08-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed checks for CPS printer spooler.

2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixes on JCL header merging, support for nested
	  composite options.

2003-07-30  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: If a printer/driver combo has Foomatic-defined
	  JCL options and the driver already generates a JCL header, the
	  JCL options are merged into the header produced by the driver.

2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, makeMan.in, foomatic-rip.in: Support for IRIX.

	* foomatic-rip.in: Updated comments.

2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Let "echo" commands in the renderer command
	  line being replaced by $myecho, so that printing on non-GNU
	  systems with user-selected GNU "echo" command works.

2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0. 
	  Tag name: "foomatic-filters-3_0_0".

	* README, USAGE: Updated for version 3.0.0.

	* foomatic-rip.1.in: Updated linuxprinting.org link for 3.0.0.
	
2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0rc2. 
	  Tag name: "foomatic-filters-3_0_0rc2".

	* README, USAGE: Updated for version 3.0.0rc2.

	* foomatic-rip.1.in: Added missing substitutions for special
	  characters in postpipe.
	
2003-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: added restriction for allowed strings by means
	  of lists of allowed characters (PPD keyword:
	  '*FoomaticRIPOptionAllowedChars <option>: "..."') and Perl
	  regular expressions (PPD: '*FoomaticRIPOptionAllowedRegExp
	  <option>: "..."'). The allowed characters are checked by a
	  '/^[...]*$/' expression in the Perl scripts, so ranges with '-',
	  forbidden characters with a leading '^', or special characters