@@ -1,3 +1,9 @@
+2003-08-21  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* foomatic-rip.in: Fix on PostScript code insertion for nested
+	  composite option. There was the possibility of an infinite loop,
+	  even without the composite options being actually nested.
+
 2003-08-14  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-rip.in: Fixed checks for CPS printer spooler.
